@@ -1,3 +1,5 @@
+	* static_assert() when trying to get a runtime value from any matcher
+
 	* Bumped required CMake version to 3.14 or later. Thank you Luke Dennis
 	  for reporting.
 
